<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">SubTypo</string>
  <string name="close_app">Close app</string>
  <string name="about">About</string>
  <string name="about_libs">Libraries</string>
  <string name="settings">Settings</string>
  <string name="remove">Remove</string>
  <string name="delete">Delete</string>
  <string name="rename">Rename</string>
  <string name="edit">Edit</string>
  <string name="ok">Ok</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="copy">Copy</string>
  <string name="grant">Grant</string>
  <string name="export">Export</string>
  <string name="copy_and_report_issue">Copy and report issue</string>

  <string name="common_failed">Failed</string>

  <string name="description_video_thumbnail">Thumbnail of the video</string>
  <string name="description_select_video">Selected a video</string>
  <string name="description_remove_video">Remove the selected video</string>

  <!-- Messages -->
  <string name="msg_please_wait">Please wait.</string>
  <string name="msg_delete_confirmation">Are you sure to delete: %1$s</string>
  <string name="msg_video_not_chosen">Video not chosen</string>

  <!-- Permission -->
  <string name="permission_required">Required permissions</string>
  <string name="permission_required_detail">This app requires permissions to access video and subtitle files. Without these permissions, certain features may not function properly.</string>
  <string name="permission_required_settings_detail">Please grant the required permissions manually through the app\'s settings to ensure full functionality.</string>
  <string name="permission_required_settings_goto">Go to settings</string>

  <!-- Warn -->
  <string name="warn_text_field_cannot_empty">This text field cannot be empty</string>
  <string name="warn_name_already_existing">Name already existing</string>

  <!-- Preferences -->
  <string name="pref_category_configure">Configure</string>
  <string name="pref_category_about">About</string>
  <string name="pref_category_appearance">Appearance</string>
  <string name="pref_configure_general">General</string>
  <string name="pref_configure_general_summary">General application settings.</string>
  <string name="pref_appearance_ui_mode">UI Mode</string>
  <string name="pref_appearance_ui_mode_summary">Choose light or dark mode</string>
  <string name="pref_appearance_ui_mode_value_light">Light</string>
  <string name="pref_appearance_ui_mode_value_dark">Dark</string>
  <string name="pref_appearance_ui_mode_value_follow">Follow System</string>
  <string name="pref_appearance_materialyou" translatable="false">Material You</string>
  <string name="pref_appearance_materialyou_summary">The app follows the device\'s theme colors (requires app restart).</string>
  <string name="pref_about_github" translatable="false">GitHub</string>
  <string name="pref_about_github_summary">This app is open source!</string>
  <string name="pref_about_version">Version</string>
  <string name="pref_about_libraries">Libraries</string>
  <string name="pref_about_libraries_summary">Libraries used in the application.</string>

  <string name="video_player_show">Show Video Player</string>
  <string name="video_player_hide">Hide Video Player</string>
  <string name="video_player_error_generic">Playback failed</string>
  <string name="video_player_error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
  <string name="video_player_error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
  <string name="video_player_error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
  <string name="video_player_error_querying_decoders">Unable to query device decoders</string>
  <string name="video_player_error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
  <string name="video_player_error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
  <string name="video_player_error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

  <!-- Project -->
  <string name="projects">Projects</string>
  <string name="proj_editor_edit">Edit Your Project</string>
  <string name="proj_editor_create">Create New Project</string>
  <string name="proj_editor_enter_name">Enter project name</string>
  <string name="proj_editor_video_remove">Remove video</string>
  <string name="proj_editor_video_no_select">No video has been selected</string>
  <string name="proj_editor_video_tap_to_select">Tap to select a video (optional)</string>
  <string name="proj_editor_error_name_required">The project name is required</string>
  <string name="proj_editor_success_create">Project created successfully</string>
  <string name="proj_editor_success_update">Project successfully updated</string>

  <string name="proj_initializing">Initializing project.</string>
  <string name="proj_saving">Saving project.</string>
  <string name="proj_close">Close Project</string>
  <string name="proj_no_projects">Without projects click "+" to create projects!</string>
  <string name="proj_current_video_position">Current video position: %1$s</string>

  <string name="proj_error_unable_to_load">Unable to load this project.</string>

  <string name="proj_export_subtitle">Export Subtitle</string>
  <string name="proj_export_subtitle_saved">Exported successfully</string>
  <string name="proj_export_subtitle_error">Export error</string>
  <string name="proj_export_subtitle_error_no_subtitles">Add subtitles to be able to export.</string>

  <string name="proj_import_subtitle">Import Subtitle</string>
  <string name="proj_import_subtitle_success">Imported successfully</string>
  <string name="proj_import_subtitle_error">Import error</string>
  <!-- Subtitles -->
  <string name="subtitles">Subtitles</string>
  <string name="subtitle_loading">Loading subtitles.</string>
  <string name="subtitle_add">Add Subtitle</string>
  <string name="subtitle_edit">Edit Subtitle</string>
  <string name="subtitle_remove_msg">Are you sure you want to delete this subtitle?</string>
  <string name="subtitle_list">Subtitles</string>
  <string name="subtitle_list_empty">No subtitles, click \"+\" to add.</string>
  <string name="subtitle_enter_name">Enter name</string>
  <string name="subtitle_enter_format">Enter format</string>
  <string name="subtitle_error_remove">Unable to delete this subtitle</string>
  
  <string name="subtitle_cue_list_empty">Empty text list click the \"+\" below to add new text.</string>
  <string name="subtitle_cue_add">Add text</string>
  <string name="subtitle_cue_edit">Edit text</string>
  <string name="subtitle_cue_remove_msg">Are you sure you want to remove this text?</string>
  <string name="subtitle_cue_enter_start_time">Enter start time</string>
  <string name="subtitle_cue_enter_end_time">Enter end time</string>
  <string name="subtitle_cue_enter_text">Enter text</string>
  <string name="subtitle_cue_invalid_time">This is not a valid time.</string>

</resources>
