<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/copy_and_report_issue"
            android:id="@+id/log_container">

            <HorizontalScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingEnd="10dp"
                    android:textAppearance="?textAppearanceBodyLarge"
                    android:paddingStart="10dp"
                    android:textIsSelectable="true"
                    android:id="@+id/log" />

            </HorizontalScrollView>

        </ScrollView>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/copy"
            app:layout_constraintBottom_toTopOf="@id/close_app"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/log_container"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_weight="1.0"
            android:text="@string/copy_and_report_issue"
            android:id="@+id/copy_and_report_issue" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/copy_and_report_issue"
            app:layout_constraintBottom_toTopOf="@id/close_app"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/log_container"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.Button"
            android:text="@string/copy"
            android:id="@+id/copy" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/copy_and_report_issue"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/close_app"
            android:id="@+id/close_app" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>