<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <RelativeLayout
    android:id="@+id/top_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding">

    <TextView
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_toLeftOf="@id/delete_cue"
      android:textSize="14sp" />

    <ImageView
      android:id="@+id/delete_cue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_delete"
      android:layout_centerVertical="true"
      android:layout_alignParentEnd="true"
      style="@style/ControllerImageStyle" />

  </RelativeLayout>

  <View
    android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="@dimen/divider_size"
    android:background="?attr/colorOutlineVariant" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:orientation="vertical"
    android:layout_weight="1.0">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingHorizontal="@dimen/dialog_padding"
      android:paddingTop="@dimen/dialog_padding">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_start_time"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/subtitle_cue_enter_start_time"
          android:layout_weight="1.0"
          style="@style/AppTheme.TextInputLayout">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_end_time"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_small"
          android:hint="@string/subtitle_cue_enter_end_time"
          android:layout_weight="1.0"
          style="@style/AppTheme.TextInputLayout">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium"
        android:hint="@string/subtitle_cue_enter_text"
        style="@style/AppTheme.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tie_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLines="3" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

  </ScrollView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dialog_padding"
    android:paddingHorizontal="@dimen/dialog_padding">

    <include
      android:id="@+id/dialog_buttons"
      layout="@layout/layout_dialog_buttons" />

  </LinearLayout>

</LinearLayout>